Add runs for pair and triplet
Saved Models excluded due too large file sizes

--- a/src/DataPreperation.ipynb
+++ b/src/DataPreperation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>identity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2344</th>\n",
+       "      <td>../data/img_align_celeba/002345.jpg</td>\n",
+       "      <td>8223</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 filename  identity\n",
+       "2344  ../data/img_align_celeba/002345.jpg      8223"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadata[metadata[\"filename\"] == \"../data/img_align_celeba/002345.jpg\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([list(['../data/img_align_celeba/002345.jpg', '../data/img_align_celeba/010867.jpg', '../data/img_align_celeba/014529.jpg', '../data/img_align_celeba/018200.jpg', '../data/img_align_celeba/019831.jpg', '../data/img_align_celeba/028330.jpg', '../data/img_align_celeba/039247.jpg', '../data/img_align_celeba/061440.jpg', '../data/img_align_celeba/067691.jpg', '../data/img_align_celeba/071881.jpg', '../data/img_align_celeba/079908.jpg', '../data/img_align_celeba/094869.jpg', '../data/img_align_celeba/097951.jpg', '../data/img_align_celeba/108561.jpg', '../data/img_align_celeba/114813.jpg', '../data/img_align_celeba/116942.jpg', '../data/img_align_celeba/127437.jpg', '../data/img_align_celeba/130786.jpg', '../data/img_align_celeba/133654.jpg', '../data/img_align_celeba/161321.jpg'])],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadata_grouped[metadata_grouped[\"identity\"] == 8223][\"filename\"].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "includeAll = False\n",
+    "includeAll = True\n",
     "\n",
     "metadata_triplet_list_identityOnce = list()\n",
     "metadata_triplet_list_all = list()\n",
@@ -120,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,12 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "metadata_pair_list = list()\n",
-    "limit_identities = 200\n",
+    "limit_identities = 2000\n",
     "\n",
     "rand_gen = random.Random(123)\n",
     "size = len(metadata_grouped_cleaned.index)\n",
@@ -178,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,18 +274,59 @@
     "    positive = row[\"filename\"][rand_positive]\n",
     "    negative = metadata_grouped_cleaned.iloc[rand_negative_x]['filename'][rand_negative_y]\n",
     "    metadata_pair_list.append([anchor, positive, 1])\n",
-    "    metadata_pair_list.append([anchor, negative, 0])\n",
-    "        \n"
+    "    metadata_pair_list.append([anchor, negative, 0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "metadata_pair = pd.DataFrame(metadata_pair_list, columns=[\"anchor\",\"compare\", \"label\"])\n",
-    "metadata_pair.to_json(\"../data_meta/img_align_celeba/processed/metadate_pairs.json\")"
+    "metadata_pair.to_json(\"../data_meta/img_align_celeba/processed/metadate_pairs_limit5000.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata_pair_list = list()\n",
+    "limit_identities = 500\n",
+    "\n",
+    "rand_gen = random.Random(123)\n",
+    "size = len(metadata_grouped_cleaned.index)\n",
+    "\n",
+    "tempIdentity = metadata_grouped_cleaned[\"identity\"].astype(int)\n",
+    "\n",
+    "metadata_grouped_cleaned_limit = metadata_grouped_cleaned.drop(metadata_grouped_cleaned[tempIdentity >= limit_identities].index)\n",
+    "\n",
+    "rand_gen = random.Random(123)\n",
+    "size = len(metadata_grouped_cleaned.index)\n",
+    "\n",
+    "for index, row in metadata_grouped_cleaned_limit.iterrows():\n",
+    "    usedImages = 0\n",
+    "    while usedImages < len(row['filename']):\n",
+    "        rand_positive = usedImages\n",
+    "        while rand_positive == usedImages:\n",
+    "            rand_positive = rand_gen.randint(0, len(row['filename'])-1)\n",
+    "        \n",
+    "        rand_negative_x = index\n",
+    "        while rand_negative_x == index:\n",
+    "            rand_negative_x = rand_gen.randint(0, size-1)\n",
+    "        negative_size = metadata_grouped_cleaned.iloc[rand_negative_x]['filename'].__len__()\n",
+    "        rand_negative_y = rand_gen.randint(0,negative_size-1)\n",
+    "        anchor = row[\"filename\"][usedImages]\n",
+    "        positive = row[\"filename\"][rand_positive]\n",
+    "        negative = metadata_grouped_cleaned.iloc[rand_negative_x]['filename'][rand_negative_y]\n",
+    "        metadata_pair_list.append([anchor, positive, 1])\n",
+    "        metadata_pair_list.append([anchor, negative, 0])\n",
+    "        usedImages = usedImages+1\n",
+    "    \n",
+    "metadata_pair = pd.DataFrame(metadata_pair_list, columns=[\"anchor\",\"compare\", \"label\"])\n",
+    "metadata_pair.to_json(\"../data_meta/img_align_celeba/processed/metadate_pairs_all_limit500.json\")"
    ]
   }
  ],
@@ -230,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
